# mvg-exercises

./: .gitignore  README.md  common.h
exercise2-matrices-operations/: example.cpp
exercise3-rotations/: CMakeLists.txt  example.cpp  rotations.cpp
exercise4-undistorted-reprojection-and-projections/: 3dto2dprojections.cpp  CMakeLists.txt  radial-distortion.cpp
exercise5-harris-corner-detector/: CMakeLists.txt  harris-corner-detector-fine.cpp  harris-corner-detector.cpp
exercise6-eight-point-algorithm/: AKAZE_match.cpp  CMakeLists.txt  eight-point-algorithm-matlab-solution.cpp  eight-point-algorithm.cpp
exercise7-direct-methods-1/: CMakeLists.txt  direct-methods.cpp
exercise8-epipolarLines/: CMakeLists.txt  epipolar-line.cpp
exercise9-dirct-methods-2/: CMakeLists.txt  direct-methods.cpp
